Fixed and refactored testParserChordSuccessTest